# pisco4cmb

./: .gitignore  CMakeLists.txt  README.md  antenna_with_struts.json  run_pointsource.sh  run_wholesky.sh
cmake_modules/: CMakeLists.txt  FindCHealpix.cmake  FindHealpix.cmake  FindSofa.cmake  Findcfitsio.cmake  Findcnpy.cmake
data/pointing/: jpleph2013_40.405.md5
dependencies/: get_dependencies.sh  install_bpoint.sh  install_cfitsio.sh  install_healpix.sh  install_sofa.sh
doc/tex/: report.aux  report.tex
docker/: Dockerfile
optional/: get_oneapi.sh
programs/: cuda_sim_pointsource_obs.cpp  cuda_sim_pointsource_scan.cpp  cuda_sim_wholesky_scan.cpp  gauss_beam_simple_full_sky.cpp  point_source_scan.cpp  sim_point_source_scan.cpp  user_beam_point_source_scan.cpp
scripts/: compute_powerspectrum.py  create_cmb.py  create_cmb_from_camb_cls.py  create_lcdm_cmb.py  create_point_source_map.py  fields2beams.py  fields2beams_cxisco.py  grasp_azel_grid_to_healpix.py  graspbeam_to_healpix.py  make_ps_with_res_plot.py  no_cx_graspbeam_to_healpix.py  plot_maps.py  plot_maps_mollview.py  plot_powerspectrum.py  setup_docker.sh
src/: CMakeLists.txt  cuda_sim_wholesky_scan.cpp  gpu_test.cpp  main.cpp  sim_point_source_scan.cpp  sim_wholesky_scan.cpp  test_cpu.cpp  wholesky_convolution_cpu.cpp  wholesky_convolution_gpu.cpp
src/Bpoint/: BPoint.h  DEc405  ElapsedTime.cpp  ElapsedTime.h  Makefile  asc2bin.cxx  asc2bin.e  bpoint.cpp  ephemT.cxx  ephemT.e  jpl_eph.c  jpl_eph.cpp  jpl_eph.h  test_bpoint.c  test_bpoint.e
src/Convolution/: convolution_engine.cu  convolution_engine.h  cu_utils.cu  cu_utils.h
src/Convolver/: convolver.cpp  convolver.hpp
src/GpuConvolver/: gpuconvolver.cpp  gpuconvolver.cu  gpuconvolver.hpp
src/GpuConvolver/cuda/: beam_times_sky.cu  beam_times_sky.h  cudaConv.h  cudaConv2.cu  cudaConv2.h  cudaHealpix.cu  cudaHealpix.h  cudaSphtransf.cu  cudaSphtransf.h  cuda_error_check.h  cuda_utils.h  cudaconv.cu  cudaconv.h  healpix_math.cuh  healpix_math.h  healpix_utils.cu  healpix_utils.cuh  healpix_utils.h  sphtrigo.cu  sphtrigo.cuh
src/Mapper/: mapper.cpp  mapper.hpp
src/Mapping/: chealpix_interpolate.cpp  chealpix_interpolate.h  healpix_map.cpp  healpix_map.h  mapping_routines.cpp  mapping_routines.h
src/Polbeam/: polbeam.cpp  polbeam.hpp
src/Scan/: scan.cpp  scan.hpp
src/Scanning/: scanning.cpp  scanning.hpp
src/Sky/: sky.cpp  sky.hpp
src/SkyMap/: skymap.cpp  skymap.hpp
src/Sphtrigo/: sphtrigo.cpp  sphtrigo.hpp
tests/cudaConvolution/: makefile  test.x  test_sky_to_beam_matching_kernel.cu
tests/cudaHealpix/: makefile  test.x  test_pix2ang.cu
workdir/full_sky/: cmb_cl.csv  config.json
workdir/full_sky/128/: cmb_cl.csv  config.json  ps.csv
workdir/point_source/: output_map.txt  tod.txt
